Fix problems with word overflow

--- a/src/components/product/ProductInfoCreator.module.scss
+++ b/src/components/product/ProductInfoCreator.module.scss
@@ -30,4 +30,5 @@
         left: 1.7rem;
         bottom: 1.4rem;
     };
+    overflow-wrap: break-word;
 }
